@@ -1,3 +1,2 @@
-DIST scikit-image-0.14.2.tar.gz 27785514 SHA256 1afd0b84eefd77afd1071c5c1c402553d67be2d7db8950b32d6f773f25850c1f SHA512 ab31fdb5b1d16b794ccc4d673f6c8bce0a8a54b81c0e43c9a4cdd5eb0465ef69ac184a06e395a1d27da51c2e0911db9afa2be4e740f44bceab952428eb7f599a WHIRLPOOL 9be56b58bff3b6d4706a907fedb5c5545e31630e49f9f5a8d0adf9afbabf63076694313b79904065331e552311278f64e3a49ff47540af1b2b3867e2c65d417f
 DIST scikit-image-0.14.3.tar.gz 27312311 SHA256 f05eab2df885fb6fde3df0e4d24c9c620d6474ea0eb949fd45f6f634925dd514 SHA512 7c3a09004eeb0f075532c38d14f8b402491c39a4ca56bc68aea17804756f5907f01cba4d1b8b45e1c20d1b233b84564015cf9f4124b1f5a19e103120c2466a2f WHIRLPOOL de0f2520e28b2e44db109b1a09229b8330584eb9162f5000c3c96098f523aa30ba381162cc67c1851ca1a67aafa002878e5271fc9d3173268451763dd56643bc
 DIST scikit-image-0.16.2.tar.gz 28945695 SHA256 dd7fbd32da74d4e9967dc15845f731f16e7966cee61f5dc0e12e2abb1305068c SHA512 55393f90a00488bb177600db1a6479a297d9b73f3e9bdbaa59fdb3a3a862c50f6d35a33b4e8a1923cf3dc8bc78ab800c628824bb53fb045f4d518ad1b3a796c4 WHIRLPOOL 39d1a7d7b19a1d45002a0681a1c40d5ecb66bfb2f468850fa1a119157a69284ad02c6d5b28b3e64fc54512053033579b388febb3783e0c1b2ca218c94235cf6d
